api/src/routes/snapshots/nightlio_api__routes__extras__tests__activity_get_200_empty_page.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "activities": [],
    "next_cursor": null
  },
  "status": 200
}
