api/src/routes/snapshots/nightlio_api__routes__extras__tests__activity_get_200_second_page.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "activities": [
      {
        "created_at": "<TS>",
        "event_type": "entry_created",
        "id": 4,
        "metadata": {
          "date": "2026-08-11",
          "entry_id": 2
        },
        "user_id": 1
      },
      {
        "created_at": "<TS>",
        "event_type": "achievement_unlocked",
        "id": 3,
        "metadata": {
          "achievement_type": "first_entry"
        },
        "user_id": 1
      },
      {
        "created_at": "<TS>",
        "event_type": "entry_created",
        "id": 2,
        "metadata": {
          "date": "2026-08-10",
          "entry_id": 1
        },
        "user_id": 1
      }
    ],
    "next_cursor": 2
  },
  "status": 200
}
