api/src/routes/snapshots/nightlio_api__routes__extras__tests__activity_get_400_bad_before.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "error": "before must be an integer"
  },
  "status": 400
}
