api/src/routes/snapshots/nightlio_api__routes__extras__tests__activity_get_400_bad_limit.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "error": "limit must be an integer"
  },
  "status": 400
}
