api/src/routes/snapshots/nightlio_api__routes__extras__tests__activity_get_trailing_slash_404.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "error": "Resource not found"
  },
  "status": 404
}
