api/src/routes/snapshots/nightlio_api__routes__extras__tests__export_pdf_post_400_missing_content.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "error": "Content is required"
  },
  "status": 400
}
