api/src/routes/snapshots/nightlio_api__routes__extras__tests__export_pdf_post_413_too_large.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "error": "Content is too large to export (max 1048576 bytes)"
  },
  "status": 413
}
