api/src/routes/snapshots/nightlio_api__routes__extras__tests__music_vibe_enabled_success_shape.snap
---
source: src/routes/extras.rs
expression: result
---
{
  "artist": "jamendo-123",
  "audio_url": "https://cdn.example/track.mp3",
  "track_name": "chill"
}
